style: removing empty directories

--- a/1-Lab_AssistenciaTecnica_HTML/AcompanhamentoDeServico.html
+++ b/1-Lab_AssistenciaTecnica_HTML/AcompanhamentoDeServico.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Assistência Técnica de Celulares</h1>
     <h2>Acompanhamento de serviço</h2>
-
+<!--olá-->
     <form action="AcompanhamentoDeServico.html" method="POST">
         <br>CPF: <input type="text" name="CPF" value=""><br>
 
